# hookforms

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPRINT_PLAN.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  alembic.ini  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_notification_channels.py
api/app/: auth.py  config.py  database.py  mail.py  main.py  middleware.py  redis.py  response.py  security.py  worker.py
api/app/channels/: __init__.py  detect.py  discord.py  dispatcher.py  format_value.py  ntfy.py  slack.py  teams.py  telegram.py  validate.py  webhook.py
api/app/models/: __init__.py  api_key.py  notification.py  webhook.py
api/app/providers/: __init__.py  base.py  gmail.py  resend.py  resolver.py  sendgrid.py  smtp.py
api/app/routers/: auth.py  channels.py  webhooks.py
api/app/schemas/: auth.py  channel.py  webhook.py
config/cloudflared/: config.yml.example
scripts/: gmail_auth.py
