[project]
name = "hookforms"
version = "0.1.0"
description = "Self-hosted webhook inbox with Gmail forwarding. Receive form submissions via webhook, get notified by email."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "HookForms Contributors"},
]
keywords = ["webhook", "forms", "email", "notifications", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: Email",
]

[project.urls]
Homepage = "https://github.com/h1n054ur/hookforms"
Repository = "https://github.com/h1n054ur/hookforms"
Issues = "https://github.com/h1n054ur/hookforms/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
